<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linear_layout_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_linear_layout_margin"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:id="@+id/linear_layout_to"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/to"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="5"
                android:hint="@string/hint_to"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_cc"
                android:textSize="@dimen/fragment_linear_layout_edit_text_size">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_cc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/fragment_linear_layout_section_margin_top"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/cc"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_cc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="5"
                android:hint="@string/hint_cc"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_bcc"
                android:textSize="@dimen/fragment_linear_layout_edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_bcc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/fragment_linear_layout_section_margin_top"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/bcc"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_bcc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="5"
                android:hint="@string/hint_bcc"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_subject"
                android:textSize="@dimen/fragment_linear_layout_edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_subject"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/fragment_linear_layout_section_margin_top"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/subject"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="5"
                android:hint="@string/hint_subject"
                android:inputType="textEmailSubject|textMultiLine"
                android:nextFocusDown="@+id/edit_text_body"
                android:textSize="@dimen/fragment_linear_layout_edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/fragment_linear_layout_section_margin_top"
            android:layout_weight="6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/body"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="5"
                android:gravity="top|left"
                android:hint="@string/hint_body"
                android:inputType="text|textMultiLine"
                android:lines="12"
                android:minLines="8"
                android:textSize="@dimen/fragment_linear_layout_edit_text_size" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>